blue-green-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-blue-service
  labels:
    app: webapp
    version: blue
spec:
  selector:
    app: webapp
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-green-service
  labels:
    app: webapp
    version: green
spec:
  selector:
    app: webapp
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
