canary-service.yml
apiVersion: v1
kind: Service
metadata:
  name: canary-v1-service
  labels:
    version: v1
spec:
  selector:
    app: nodejs
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: canary-v2-service
  labels:
    version: v2
spec:
  selector:
    app: nodejs
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
