sb-logger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbwebappdeployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: sb-web-app
      version: v1
      color: blue
  template:
    metadata:
      name: sbwebapppod
      labels:
        app: sb-web-app
        version: v1
        color: blue
    spec:
      containers:
        - name: sbwebappcontainer
          image: salman1091/sb-log-app
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sbappsvc
spec:
  type: NodePort
  selector:
    app: sb-web-app #POD label
  ports:
    - port: 80
      targetPort: 8080
