ab-ingress-v2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abtest-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "60"
spec:
  ingressClassName: nginx
  rules:
  - host: "my.kubernetes.example"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: abtest-v2
            port:
              number: 80
