ingress-v1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abtest-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "my.kubernetes.example"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: abtest-v1
            port:
              number: 80
