kong-canary-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: canary-route
  namespace: default
spec:
  parentRefs:
  - name: kong
    namespace: default
  rules:
  - matches:
    - path:
        type: Prefix
        value: /
    backendRefs:
    - name: canary-v1-service
      port: 80
      weight: 90
    - name: canary-v2-service
      port: 80
      weight: 10
